boulder/tests/error/module/unknown_file.bo
# Unable to open file
# (3:
@path(i_am_never_gonna_give_you_up)
mod never_gonna_let_you_down;